# simple_game

./: Main.hs  README.md  simple-game.cabal
GameState/: Game.hs
app/: Counter.hs  Main.hs
src/: Descriptor.hs  Drawable.hs  Game.hs  GameState.hs  Input.hs  LoadShaders.hs  Material.hs  Rendering.hs  Texture.hs  Utils.hs
