cabal-version:       >=2.0
name:                simple-game
version:             0.1.0.0
synopsis:            A simple game in haskell, using monad transformers
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              madjestic
maintainer:          madjestic13@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable mtl-game
  main-is:             Main.hs
  other-modules:
                       GameState.Game
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15
                     , mtl  ^>= 2.2.2
                     , sdl2 ^>= 2.5.3.0
  
  -- hs-source-dirs:
  default-language:    Haskell2010
