cabal-version:         2.4
name:                  simple-game
version:               0.1.0.0
synopsis:              A simple game in haskell, using monad transformers
-- description:        
-- bug-reports:        

license:               BSD-3-Clause   
license-file:          LICENSE
author:                madjestic
maintainer:            madjestic13@gmail.com
-- copyright:          
category:              game
build-type:            Simple
extra-source-files:    CHANGELOG.md
                         
executable counter
  main-is:             Counter.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base  ^>= 4.14.3.0
                     , mtl  
                     , sdl2 
  
  hs-source-dirs:      app
  default-language:    Haskell2010
  
executable simple-game
  main-is:             Main.hs
  other-modules:
                       Game
                     , GameState
                     , Input
                     , Graphics.RedViz.Rendering
                     , Graphics.RedViz.Utils
                     , Graphics.RedViz.LoadShaders
                     , Graphics.RedViz.Descriptor
                     , Graphics.RedViz.Material
                     , Graphics.RedViz.Texture
                     , Graphics.RedViz.Drawable
                     
  -- other-extensions:
  build-depends:       base  ^>= 4.14.3.0             
                     , mtl                 
                     , sdl2                
                     , uuid                
                     , GLUtil              
                     , massiv              
                     , random              
                     , linear              
                     , OpenGL              
                     , simple-affine-space 
                     , vector              
                     , locators            
                     , ilist               
                     , containers          
                     , bytestring          
                     , lens                
                     , text                
                     , aeson               
                     , aeson-pretty        
                     , sort                
                     , store               
                     , split
  
  hs-source-dirs:      app
                     , src
  ghc-options:   -O2 -threaded -Wall -Werror -Wcompat -Widentities -Wno-unused-top-binds -Wno-orphans
  -- cpp-options:   -DDEBUG  
                       
  default-language:    Haskell2010

executable stepper_sdl
  main-is:             Stepper_SDL.hs
  other-modules:
                       Game
                     , GameState
                     , Input
  -- other-extensions:
  build-depends:       base  ^>= 4.14.3.0
                     , mtl
                     , sdl2
  
  hs-source-dirs:      app
                     , src
  default-language:    Haskell2010    